--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Umění do domu</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="media.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:700|Slabo+27px" rel="stylesheet">
 </head>
 <body id='skrollr-body'>
