Image change and price detail

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 	</div>
 </nav>
 <section id="content-wraper">
-		<h5 class="decoration-introduction" data-0="top: 20px;" data-200="top: 80px">ÚVOD</h5>
 		<header class="box">
 			<h1>
 				<span>Dobrý den,</span><br><br>
@@ -41,49 +40,46 @@
 			</p>
 			<div class="signature"></div>
 			<button type="" class="btn" id="reply">Napiš mi</button>
-			<div class="img-avatar" data-0="top: 100px;" data-700="top: -10px"></div>
+			<div class="img-avatar" data-0="top: 30px;" data-700="top: -10px"></div>
 		</header>
 
 		<div class="store">
-		<h5 class="decoration-store" data-700="top: 760px;" data-900="top: 820px">OBCHOD</h5>
 			<ul class="store-list">
 				<li class="item box">
 					<h2>Západ nad Oba Lake v Kanadě</h2>
 					<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
-					<p>Rozměr: 100x150cm</p>
-					<p>Cena: 3000kč</p>
+					<hr>
+					<p class="description size">Rozměr: 100x150cm</p>
+					<p class="description price">Cena: 3000kč</p>
 					<div class="img-preview"></div>
 					<button type="" class="btn buy">Chci mít na zdi</button>
 				</li>
 				<li class="item box">
 					<h2>Západ nad Oba Lake v Kanadě</h2>
 					<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
-					<p>Rozměr: 100x150cm</p>
-					<p>Cena: 3000kč</p>
+					<p class="description size">Rozměr: 100x150cm</p>
+					<p class="description price">Cena: 3000kč</p>
 					<div class="img-preview"></div>
 					<button type="" class="btn buy">Chci mít na zdi</button>
 				</li>
 				<li class="item box">
 					<h2>Západ nad Oba Lake v Kanadě</h2>
 					<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
-					<p>Rozměr: 100x150cm</p>
-					<p>Cena: 3000kč</p>
+					<p class="description size">Rozměr: 100x150cm</p>
+					<p class="description price">Cena: 3000kč</p>
 					<div class="img-preview"></div>
 					<button type="" class="btn buy">Chci mít na zdi</button>
 				</li>
 				<li class="item box">
 					<h2>Západ nad Oba Lake v Kanadě</h2>
 					<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
-					<p>Rozměr: 100x150cm</p>
-					<p>Cena: 3000kč</p>
+					<p class="description size">Rozměr: 100x150cm</p>
+					<p class="description price">Cena: 3000kč</p>
 					<div class="img-preview"></div>
 					<button type="" class="btn buy">Chci mít na zdi</button>
 				</li>
 			</ul>
 		</div>
-
-
-		<h5 class="decoration-vision" data-2100="top: 2200px;" data-2300="top: 2260px">VIZE</h5>
 
 		<div id="driver" class="box">
 			<h2>Maluji to co mě naplňuje</h2>
