--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 	</div>
 </nav>
 <section id="content-wraper">
-		<h5 class="decoration-introduction" data-0="top: 20px;" data-200="top: 80px">ÚVOD</h5>
 		<header class="box">
 			<h1>
 				<span>Dobrý den,</span><br><br>
@@ -46,7 +45,6 @@
 		</header>
 
 		<div class="store">
-		<h5 class="decoration-store" data-700="top: 760px;" data-900="top: 820px">OBCHOD</h5>
 			<ul class="store-list">
 				<li class="item box">
 					<h2>Západ nad Oba Lake v Kanadě</h2>
@@ -64,6 +62,24 @@
 					<div class="img-preview"></div>
 					<button type="" class="btn buy">Chci mít na zdi</button>
 				</li>
+			</ul>
+
+			<div id="driver" class="box">
+				<h2>Maluji to co mě naplňuje</h2>
+				<p>
+					It began in the cold evening when I was sitting on the porch
+					little higher then the level of Oba lake.
+					<br><br>
+
+					I was smoking a cigar and then it came to my mind. “I have to paint this.” I said to myself.<br>
+					And it started. All day all night I was painting.
+					<br><br>
+					And this is the result.
+				</p>
+				<div class="img-showcase"></div>
+			</div>
+
+			<ul class="store-list">
 				<li class="item box">
 					<h2>Západ nad Oba Lake v Kanadě</h2>
 					<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
@@ -84,22 +100,7 @@
 		</div>
 
 
-		<h5 class="decoration-vision" data-2100="top: 2200px;" data-2300="top: 2260px">VIZE</h5>
 
-		<div id="driver" class="box">
-			<h2>Maluji to co mě naplňuje</h2>
-			<p>
-				It began in the cold evening when I was sitting on the porch
-				little higher then the level of Oba lake.
-				<br><br>
-
-				I was smoking a cigar and then it came to my mind. “I have to paint this.” I said to myself.<br>
-				And it started. All day all night I was painting.
-				<br><br>
-				And this is the result.
-			</p>
-			<div class="img-showcase"></div>
-		</div>
 
 		<div id="subscribe" class="box">
 			<h3>Není žádný obraz v nabídce co by se vám líbil?</h3>
@@ -108,10 +109,10 @@
 		</div>
 	</section>
 
-	<script type="text/javascript" src="skrollr.min.js"></script>
+	<!-- <script type="text/javascript" src="skrollr.min.js"></script>
 	<script type="text/javascript">
     var s = skrollr.init();
-    </script>
+    </script> -->
 	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
