started using containers and flexbox

--- a/index.html
+++ b/index.html
@@ -47,20 +47,29 @@
 		<div class="store">
 			<ul class="store-list">
 				<li class="item box">
-					<h2>Západ nad Oba Lake v Kanadě</h2>
-					<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
-					<hr>
-					<p class="description size">Rozměr: 100x150cm</p>
-					<p class="description price">Cena: 3000kč</p>
+					<div class="texts-container">
+						<h2>Západ nad Oba Lake v Kanadě</h2>
+						<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
+					</div>
 					<div class="img-preview"></div>
+					<hr>
+					<div class="description-container">
+						<p class="description size">Rozměr: 100x150cm</p>
+						<p class="description price">Cena: 3000kč</p>
+					</div>
 					<button type="" class="btn buy">Chci mít na zdi</button>
 				</li>
 				<li class="item box">
-					<h2>Západ nad Oba Lake v Kanadě</h2>
-					<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
-					<p class="description size">Rozměr: 100x150cm</p>
-					<p class="description price">Cena: 3000kč</p>
+					<div class="texts-container">
+						<h2>Západ nad Oba Lake v Kanadě</h2>
+						<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
+					</div>
 					<div class="img-preview"></div>
+					<hr>
+					<div class="description-container">
+						<p class="description size">Rozměr: 100x150cm</p>
+						<p class="description price">Cena: 3000kč</p>
+					</div>
 					<button type="" class="btn buy">Chci mít na zdi</button>
 				</li>
 			</ul>
@@ -82,19 +91,29 @@
 
 			<ul class="store-list">
 				<li class="item box">
-					<h2>Západ nad Oba Lake v Kanadě</h2>
-					<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
-					<p class="description size">Rozměr: 100x150cm</p>
-					<p class="description price">Cena: 3000kč</p>
+					<div class="texts-container">
+						<h2>Západ nad Oba Lake v Kanadě</h2>
+						<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
+					</div>
 					<div class="img-preview"></div>
+					<hr>
+					<div class="description-container">
+						<p class="description size">Rozměr: 100x150cm</p>
+						<p class="description price">Cena: 3000kč</p>
+					</div>
 					<button type="" class="btn buy">Chci mít na zdi</button>
 				</li>
 				<li class="item box">
-					<h2>Západ nad Oba Lake v Kanadě</h2>
-					<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
-					<p class="description size">Rozměr: 100x150cm</p>
-					<p class="description price">Cena: 3000kč</p>
+					<div class="texts-container">
+						<h2>Západ nad Oba Lake v Kanadě</h2>
+						<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
+					</div>
 					<div class="img-preview"></div>
+					<hr>
+					<div class="description-container">
+						<p class="description size">Rozměr: 100x150cm</p>
+						<p class="description price">Cena: 3000kč</p>
+					</div>
 					<button type="" class="btn buy">Chci mít na zdi</button>
 				</li>
 			</ul>
