--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
 		<header class="box">
 			<h1>
 				<span>Dobrý den,</span><br><br>
-				Jmenuji se Ludovít Gonda a věřím že umění a hezké věci jsou <br>
-				důležitou součástí našich domovů. Přinášejí nám sklidnění a
-				uspokojení.
+				Jmenuji se Ludovít Gonda a věřím že olejové malby dokáží dodat Vašemu bydlení nový rozměr.
 			</h1>
 			<p>
-				Rozhodl jsem se, že do Českých domovů dostanu nádherné obrazy.
+				Dodávají uklidnění, energii, či inspiraci. Jsou osobnější než fotky.
+				Každý tah má na obraze svůj důvod.
 				<br><br>
-				Dejte mi vědět jaký obraz zdobí váš domov.<br><br>
+				Proto maluji osobité obrazy, které jsou naplňující a zároveň dostupné.<br><br>
 				Ludovit Gonda
 			</p>
 			<div class="signature"></div>
@@ -66,16 +65,11 @@
 			</ul>
 
 			<div id="driver" class="box">
-				<h2>Maluji to co mě naplňuje</h2>
+				<h2>Každý obraz je jen jeden. Originál.</h2>
 				<p>
-					It began in the cold evening when I was sitting on the porch
-					little higher then the level of Oba lake.
+					Obrazy nemají kopie, prodávám jen originály malované olejem na plátno, či dřevo. Do každého obrazu vkládám mnoho pozornosti.
 					<br><br>
-
-					I was smoking a cigar and then it came to my mind. “I have to paint this.” I said to myself.<br>
-					And it started. All day all night I was painting.
-					<br><br>
-					And this is the result.
+					Ke každému Vámi zakoupenému obrazu přidávám dopis s poděkováním a potvrzením, že se jedná o originál, který patří Vám.
 				</p>
 				<div class="img-showcase"></div>
 			</div>
@@ -101,8 +95,8 @@
 		</div>
 
 		<div id="subscribe" class="box">
-			<h3>Není žádný obraz v nabídce co by se vám líbil?</h3>
-			<p>Přihlašte se k odběru novinek. Každý týden posílám nová díla. Třeba se vám něco zalíbí. :)</p>
+			<h3>V nabídce není žádný obraz, který by se Vám líbil?</h3>
+			<p>To nevadí, stále maluji nové. Přihlašte se k odběru novinek a já vám každý týden pošlu nový obraz :)</p>
 			<input type="button" name="" value="">
 		</div>
 	</section>
