--- a/index.html
+++ b/index.html
@@ -116,9 +116,16 @@
 		</div>
 
 		<div id="subscribe" class="box">
-			<h3>Není žádný obraz v nabídce co by se vám líbil?</h3>
-			<p>Přihlašte se k odběru novinek. Každý týden posílám nová díla. Třeba se vám něco zalíbí. :)</p>
-			<input type="button" name="" value="">
+			<div class="subscribe-text-container">
+				<h3>Není žádný obraz v nabídce co by se vám líbil?</h3>
+				<p>Přihlašte se k odběru novinek. Každý týden posílám nová díla. Třeba se vám něco zalíbí. :)</p>
+			</div>
+			<div class="email-container">
+				<form action="">
+					<input type="email" name='email'>
+					<input type="submit" name='submit' value='Join' class="btn">
+				</form>
+			</div>
 		</div>
 	</section>
 
