--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body id='skrollr-body'>
 <div id="popup"></div>
 <div id="popup-box">
-	<p>Jsem rád, že máte zájem.</p>
-	<p>Vím, že jste obraz ještě pořádně neviděli. Zanechte prosím své telefonní číslo a já se vám osobně ozvu. Domluvíme se zaslání více fotek a i případném předání.</p>
-	<p>Díky</p>
-	<p>Níže vložte své telefonní číslo:</p>
-	<input type="text" name="">
+	<h2>Jsem rád, že máte zájem.</h2>
+	<p>Protože obrazy předávám osobně preferuji před prodejem osobní kontakt.</p>
+	<p>Zavolejte mi prosím na telefonní číslo <span class="white-text">ludo.gonda@gmail.com</span>, nebo napište na email <span class="white-text">+420 123 456 789</span></p>
+	<p>Na všem se domluvíme.</p>
 </div>
 <nav>
 	<div class="container">
@@ -48,24 +47,26 @@
 				<li class="item box">
 					<div class="texts-container">
 						<h2>Západ nad Oba Lake v Kanadě</h2>
-						<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
+						<p class="description-text">It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
 					</div>
 					<div class="img-preview"></div>
 					<div class="description-container">
-						<p class="description size">Rozměr: 100x150cm</p>
+						<p class="description type">Provedení: Olej na dřevě</p>
 						<p class="description price">Cena: 3000kč</p>
+						<p class="description size">Rozměr: 100x150cm</p>
 					</div>
 					<button type="" class="btn buy">Chci mít na zdi</button>
 				</li>
 				<li class="item box">
 					<div class="texts-container">
 						<h2>Západ nad Oba Lake v Kanadě</h2>
-						<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
+						<p class="description-text">It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
 					</div>
 					<div class="img-preview"></div>
 					<div class="description-container">
-						<p class="description size">Rozměr: 100x150cm</p>
+						<p class="description type">Provedení: Olej na dřevě</p>
 						<p class="description price">Cena: 3000kč</p>
+						<p class="description size">Rozměr: 100x150cm</p>
 					</div>
 					<button type="" class="btn buy">Chci mít na zdi</button>
 				</li>
@@ -74,7 +75,9 @@
 			<div id="driver" class="box">
 				<h2>Každý obraz je jen jeden. Originál.</h2>
 				<p>
-					Obrazy nemají kopie, prodávám jen originály malované olejem na plátno, či dřevo. Do každého obrazu vkládám mnoho pozornosti.
+					Obrazy nemají kopie, prodávám jen originály malované olejem na plátno, či dřevo.
+					<br><br>
+					Do každého obrazu vkládám mnoho pozornosti.
 					<br><br>
 					Ke každému Vámi zakoupenému obrazu přidávám dopis s poděkováním a potvrzením, že se jedná o originál, který patří Vám.
 				</p>
@@ -85,24 +88,26 @@
 				<li class="item box">
 					<div class="texts-container">
 						<h2>Západ nad Oba Lake v Kanadě</h2>
-						<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
+						<p class="description-text">It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
 					</div>
 					<div class="img-preview"></div>
 					<div class="description-container">
-						<p class="description size">Rozměr: 100x150cm</p>
+						<p class="description type">Provedení: Olej na dřevě</p>
 						<p class="description price">Cena: 3000kč</p>
+						<p class="description size">Rozměr: 100x150cm</p>
 					</div>
 					<button type="" class="btn buy">Chci mít na zdi</button>
 				</li>
 				<li class="item box">
 					<div class="texts-container">
 						<h2>Západ nad Oba Lake v Kanadě</h2>
-						<p>It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
+						<p class="description-text">It began in the cold evening when I was sitting on the porch. It was litter higher then the level of Oba Lake</p>
 					</div>
 					<div class="img-preview"></div>
 					<div class="description-container">
-						<p class="description size">Rozměr: 100x150cm</p>
+						<p class="description type">Provedení: Olej na dřevě</p>
 						<p class="description price">Cena: 3000kč</p>
+						<p class="description size">Rozměr: 100x150cm</p>
 					</div>
 					<button type="" class="btn buy">Chci mít na zdi</button>
 				</li>
