--- a/index.html
+++ b/index.html
@@ -115,13 +115,55 @@
 				<p>To nevadí, stále maluji nové. Přihlašte se k odběru novinek a já vám každý týden pošlu nový obraz :)</p>
 			</div>
 			<div class="email-container">
-				<form action="">
-					<input type="email" name='email'>
-					<input type="submit" name='submit' value='Join' class="btn">
+				<form action="//github.us14.list-manage.com/subscribe/post?u=5734fb55d7b5c3fa0848daa0f&amp;id=3cce86bd65" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+					<input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe" class="btn">
 				</form>
 			</div>
 		</div>
 	</section>
+
+
+
+
+	<!-- Begin MailChimp Signup Form -->
+<div id="mc_embed_signup">
+<form action="//github.us14.list-manage.com/subscribe/post?u=5734fb55d7b5c3fa0848daa0f&amp;id=3cce86bd65" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<h2>Subscribe to our mailing list</h2>
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5734fb55d7b5c3fa0848daa0f_3cce86bd65" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
+
+	<!-- Begin MailChimp Signup Form -->
+<!-- <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script> -->
+<!--End mc_embed_signup-->
+
+	<script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
+	<script>
+	  // Initialize Firebase
+	  var config = {
+	    apiKey: "AIzaSyDpbjJqwBT9buVtkty0isv4OPqoqXB9Zy4",
+	    authDomain: "page-for-ludo.firebaseapp.com",
+	    databaseURL: "https://page-for-ludo.firebaseio.com",
+	    storageBucket: "page-for-ludo.appspot.com",
+	  };
+	  firebase.initializeApp(config);
+	</script>
 
 	<!-- <script type="text/javascript" src="skrollr.min.js"></script>
 	<script type="text/javascript">
